--- a/src/app/styles/theme.css
+++ b/src/app/styles/theme.css
@@ -1,5 +1,3 @@
-@import "tw-animate-css";
-
 @custom-variant dark (&:is(.dark *));
 
 :root {
@@ -203,6 +201,13 @@
     }
     to {
       transform: translateY(calc(-100% - var(--gap)));
+    }
+  }
+
+  --animate-skeleton: skeleton 2s -1s infinite linear;
+  @keyframes skeleton {
+    to {
+      background-position: -200% 0;
     }
   }
 }
